fix: text align about us

--- a/src/components/AboutUsSection/index.module.scss
+++ b/src/components/AboutUsSection/index.module.scss
@@ -223,7 +223,7 @@
 }
 
 .paragraph {
-    text-align: center;
+    text-align: justify;
     margin-bottom: 15px;
 }
 
